<resources>
    <string-array name="plants">
        <item>TCP</item>
        <item>UDP</item>
        <item>RUDP</item>
    </string-array>

    <string name="app_name">NetworkTest</string>

    <string name="action_settings">Settings</string>
    <string name="label_destination_ip">Destination IP</string>
    <string name="label_port">Port</string>
    <string name="label_text">Text</string>
    <string name="hint_ip">192.168.1.100</string>
    <string name="hint_text">Text to send</string>
    <string name="hint_port">50000</string>
    <string name="button_start">Start!</string>
    <string name="button_stop">Stop!</string>
    <string name="title_activity_send_to_uri">SendToUri</string>
</resources>
